--- a/pom.xml
+++ b/pom.xml
@@ -449,4 +449,16 @@
         </profile>        
     </profiles>
 
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>Internal Releases</name>
+            <url>http://localhost:8903/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>Internal Snapshots</name>
+            <url>http://localhost:8903/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
